[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "short games with numbers"
authors = ["maryker <mashalipatowa@yandex.ru>"]
readme = "README.md"
classifiers = [
    "Operating System :: Unix",
    "Programming Language :: Python :: 3.8",
    "License :: Free For Home Use"
]
packages = [
{include = "brain_games"}
]
repository = "https://github.com/maryker/python-project-49.git"

[tool.poetry.dependencies]
python = "^3.8.1"
prompt = "^0.4.1"

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"
brain-even = "brain_games.scripts.brain_even:main"
brain-calc = "brain_games.scripts.brain_calc:main"
brain-gcd = "brain_games.scripts.brain_gcd:main"
brain-progression = "brain_games.scripts.brain_progression:main"
brain-prime = "brain_games.scripts.brain_prime:main"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.17.1"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
